# llm-agent

./: .env.example  .envrc  .gitignore  README.md  pyproject.toml
setup/: README.md  upgrade.sh
src/: agent.py  llm_client.py  main.py
